tijo-bmi, wprowadzono obsluge lombok